# vs_code_and_catch2

./: .gitignore  readme.md
Test1/: main.cpp  readme.md
Test2/: CMakeLists.txt  Readme.md
Test2/src/: CMakeLists.txt
Test2/src/factorial/: CMakeLists.txt  factorial.cpp
Test2/tests/: CMakeLists.txt  factorial.test.cpp
Test3/: .gitignore  CMakeLists.txt  Readme.md
Test3/src/: CMakeLists.txt
Test3/src/app/: CMakeLists.txt  main.cpp
Test3/src/factorial/: CMakeLists.txt  factorial.cpp  factorial.hpp
Test3/src/string_left_pad/: CMakeLists.txt  string_left_pad.cpp  string_left_pad.hpp
Test3/tests/: CMakeLists.txt  factorial.test.cpp  main.cpp  string_left_pad.test.cpp
